--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,6 @@ python:
  -"3.6"
  -"2.7"
 install: pip install -r requirement.txt
-script: pytest
+script: 
+ -pytest
+ -coverge run --source = app -m pytest && coverage report
