--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,13 @@
 language: python
 python:
  -"3.6"
- -"2.7"
-install: pip install -r requirement.txt
+install: 
+  -pip install -r requirement.txt
+  -pip install coveralls
 script: 
  -pytest
- -coverge run --source = app -m pytest && coverage report
+ -coverge run --source=app -m pytest && coverage report
+after_success:
+  -coveralls
+after_success:
+  -coveralls
