--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: python
 python: 3.6
 install: 
- -pip install -r requirement.txt
+ -pip install -r requirements.txt
  -pip install coveralls
 script: 
  -pytest
  -coverge run --source=app -m pytest && coverage report
 after_success:
-  -coveralls
+ -coveralls
 after_success:
-  -coveralls
+ -coveralls
