--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ install:
  - pip install coveralls
 script: 
  - pytest
- - coverage run --source=endpoints -m pytest && coverage report
+ - coverage run --source=test_endpoints -m pytest && coverage report
 after_success:
  - coveralls
 after_success:
