--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,19 @@
+asn1crypto==0.24.0
 astroid==2.0.1
 atomicwrites==1.1.5
 attrs==18.1.0
+bcrypt==3.1.4
+cffi==1.11.5
 click==6.7
+cryptography==2.3
 Flask==1.0.2
+Flask-JWT-Extended==3.12.0
 gunicorn==19.9.0
+idna==2.7
 isort==4.3.4
 itsdangerous==0.24
 Jinja2==2.10
+jwt==0.5.4
 lazy-object-proxy==1.3.1
 MarkupSafe==1.0
 mccabe==0.6.1
@@ -15,6 +22,8 @@ pkg-resources==0.0.0
 pluggy==0.6.0
 psycopg2==2.7.5
 py==1.5.4
+pycparser==2.18
+PyJWT==1.6.4
 pylint==2.0.0
 pytest==3.6.3
 six==1.11.0
