--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aniso8601==3.0.2
 asn1crypto==0.24.0
 astroid==2.0.1
 atomicwrites==1.1.5
@@ -7,18 +8,20 @@ cffi==1.11.5
 click==6.7
 cryptography==2.3
 Flask==1.0.2
+Flask-Bcrypt==0.7.1
 Flask-JWT-Extended==3.12.0
+flask-restplus==0.11.0
 gunicorn==19.9.0
 idna==2.7
 isort==4.3.4
 itsdangerous==0.24
 Jinja2==2.10
+jsonschema==2.6.0
 jwt==0.5.4
 lazy-object-proxy==1.3.1
 MarkupSafe==1.0
 mccabe==0.6.1
 more-itertools==4.2.0
-pkg-resources==0.0.0
 pluggy==0.6.0
 psycopg2==2.7.5
 py==1.5.4
@@ -26,6 +29,7 @@ pycparser==2.18
 PyJWT==1.6.4
 pylint==2.0.0
 pytest==3.6.3
+pytz==2018.5
 six==1.11.0
 typed-ast==1.1.0
 Werkzeug==0.14.1
