--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 aniso8601==3.0.2
+Flask-Cors==3.0.6
 asn1crypto==0.24.0
 astroid==2.0.1
 atomicwrites==1.1.5
@@ -22,10 +23,9 @@ MarkupSafe==1.0
 mccabe==0.6.1
 more-itertools==4.2.0
 pluggy==0.6.0
-psycopg2==2.7.5
+psycopg2-binary==2.7.5
 py==1.5.4
 pycparser==2.18
-PyJWT==1.6.4
 pylint==2.0.0
 pytest==3.6.3
 pytz==2018.5
