--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ flask-marshmallow = "*"
 flask-sqlalchemy = "*"
 flask-migrate = "*"
 psycopg2-binary = "*"
+marshmallow-sqlalchemy = "*"
 
 [requires]
 python_version = "3.8"
