--- a/Pipfile
+++ b/Pipfile
@@ -17,6 +17,7 @@ psycopg2-binary = "*"
 marshmallow-sqlalchemy = "*"
 flask-bcrypt = "*"
 pyjwt = "*"
+pytest = "*"
 
 [requires]
 python_version = "3.8"
