--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,43 @@
 alembic==1.4.3
 aniso8601==8.0.0
+astroid==2.4.2
 attrs==20.3.0
+bcrypt==3.2.0
+cffi==1.14.3
 click==7.1.2
 Flask==1.1.2
+Flask-Bcrypt==0.7.1
 flask-marshmallow==0.14.0
 Flask-Migrate==2.5.3
 flask-restplus==0.13.0
 Flask-SQLAlchemy==2.4.4
+iniconfig==1.1.1
+isort==5.6.4
 itsdangerous==1.1.0
 Jinja2==2.11.2
 jsonschema==3.2.0
+lazy-object-proxy==1.4.3
 Mako==1.1.3
 MarkupSafe==1.1.1
 marshmallow==3.9.1
+marshmallow-sqlalchemy==0.24.0
+mccabe==0.6.1
+packaging==20.4
+pluggy==0.13.1
 psycopg2-binary==2.8.6
+py==1.9.0
+pycparser==2.20
+PyJWT==1.7.1
+pylint==2.6.0
+pyparsing==2.4.7
 pyrsistent==0.17.3
+pytest==6.1.2
 python-dateutil==2.8.1
 python-dotenv==0.15.0
 python-editor==1.0.4
 pytz==2020.4
 six==1.15.0
 SQLAlchemy==1.3.20
+toml==0.10.2
 Werkzeug==0.16.1
+wrapt==1.12.1
