--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,12 @@ before_script:
 # command to install dependencies
 install:
   - pip install -r requirements.txt
+  - pip install coveralls
+  - pip install codeclimate-test-reporter
 # command to run tests
 script:
   - pytest
+
+after_success:
+  - coveralls
+  - codeclimate-test-reporter
