--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,7 @@ marshmallow-sqlalchemy = "*"
 flask-bcrypt = "*"
 pyjwt = "*"
 pytest = "*"
+pytest-cov = "*"
 
 [requires]
 python_version = "3.8"
