--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 alembic==1.4.3
-aniso8601==8.0.0
+aniso8601==8.1.0
 astroid==2.4.2
 attrs==20.3.0
 bcrypt==3.2.0
-cffi==1.14.3
+cffi==1.14.4
 click==7.1.2
+coverage==5.3.1
 Flask==1.1.2
 Flask-Bcrypt==0.7.1
 flask-marshmallow==0.14.0
@@ -19,25 +20,26 @@ jsonschema==3.2.0
 lazy-object-proxy==1.4.3
 Mako==1.1.3
 MarkupSafe==1.1.1
-marshmallow==3.9.1
-marshmallow-sqlalchemy==0.24.0
+marshmallow==3.10.0
+marshmallow-sqlalchemy==0.24.1
 mccabe==0.6.1
-packaging==20.4
+packaging==20.8
 pluggy==0.13.1
 psycopg2-binary==2.8.6
-py==1.9.0
+py==1.10.0
 pycparser==2.20
-PyJWT==1.7.1
+PyJWT==2.0.0
 pylint==2.6.0
 pyparsing==2.4.7
 pyrsistent==0.17.3
-pytest==6.1.2
+pytest==6.2.1
+pytest-cov==2.10.1
 python-dateutil==2.8.1
 python-dotenv==0.15.0
 python-editor==1.0.4
-pytz==2020.4
+pytz==2020.5
 six==1.15.0
-SQLAlchemy==1.3.20
+SQLAlchemy==1.3.22
 toml==0.10.2
 Werkzeug==0.16.1
 wrapt==1.12.1
